--- a/rock-paper-scissors-simulator/style.css
+++ b/rock-paper-scissors-simulator/style.css
@@ -36,34 +36,9 @@ body {
   background-color: var(--color-bg);
 }
 
-/* Page structure */
-.wrapper {
-  min-height: var(--wrapper-height);
-  display: grid;
-  place-items: center;
-  margin: 0 1rem;
-}
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Very light scaling for our illustration */
-.title {
-  color: #2800FF;
-  font-family: HK Grotesk;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 100px;
-  line-height: 105%;
-  margin: 0;
-}
-
 #canvas {
   background: white;
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: -10px;
 }
