--- a/rock-paper-scissors-simulator/style.css
+++ b/rock-paper-scissors-simulator/style.css
@@ -1,6 +1,6 @@
 /* Our default values set as CSS variables */
 :root {
-  --color-bg: #69F7BE;
+  --color-bg: #000000;
   --color-text-main: #000000;
   --color-primary: #FFFF00;
   --wrapper-height: 87vh;
